argocd/clusters/xna-foundation/live/quay/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quay
  annotations:
    openshift.io/node-selector: "node-role.kubernetes.io/infra="
