argocd/clusters/xna-foundation/live/quay/build-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: signal9-quay-builder
  namespace: quay
spec:
  host: quay-build.apps.xna-foundation.rho.lab.signal9.gg
  to:
    kind: Service
    name: signal9-quay-app
    weight: 100
  port:
    targetPort: grpc
  tls:
    termination: passthrough
  wildcardPolicy: None
